Refactored to avoid using 1 thread per shard for receiving notifications